assets/css/style.css
/*---=== General ===---*/
body {
	font-family: "Open sans", sans-serif;
	background-color: #040404;
	color: #fff;
	position: relative;
}
body::before {
	content: "";
	position: fixed;
	background: #040404 url("../img/bg.jpg") top right no-repeat;
	background-size: cover;
	left: 0;
	right: 0;
	top: 0;
	height: 100vh;
	z-index: -1;
	opacity: .7;
}
@media (min-width: 1024px) {
	body::before{
		background-attachment: fixed;
	}
}
a{
	color: #18d26e;
}
a:hover{
	color: #35e888;
	text-decoration: none;
}
h1, h2, h3, h4, h5, h6 {
	font-family: "Railewa, sans-serif"
}

/*=== Header ===*/
#header {
	transition: ease-in-out 0.3s;
	position: relative;
	height: 100vh;
	display: flex;
	align-items: center;
	z-index: 997;
	overflow-y: auto;
}
#header * {
	transition: ease-in-out 0.3s;
}
#header h1 {
	font-size: 47px;
	margin: 0;
	padding: 0;
	line-height: 1;
	font-weight: 800;
	font-family: "Poppins", sans-serif;
	text-shadow: 0 0 20px #18d26e;
}
#header h1 a {
	color: #fff;
}
#header h1 a:hover {
	color: #18d26e;
	list-style: 1;
	display: inline-block;
	text-shadow: 0 0 30px #18d26e;
	filter: blur(0.8px);
}
#header h2 {
	font-size: 27px;
	margin-top: 20px;
	color: rgba(255, 255, 255, 0.8);
}
#header h2 span {
	color: #fff;
	border-bottom: 2px solid #18d26e;
	padding-bottom: 6px;
}
#header h2 span:hover {
	color: #fff;
	border-bottom: 2px solid #ff28f4;
	padding-bottom: 6px;
}
#header .social-links {
	margin-top: 40px;
	display: flex;
}
#header .social-links a {
	font-size: 16px;
	display: flex;
	justify-content: center;
	align-items: center;
	background: rgba(255, 255, 255, 0.1);
	color: #fff;
	line-height: 1;
	margin-right: 8px;
	border-radius: 50%;
	width: 40px;
	height: 40px;
}
#header .social-links a:hover {
	background: #18d26e;
}

/* Responsive */
@media (max-width: 992px) {
	#header h1 {
		font-size: 36px;
	}
	#header h2 {
		font-size: 20px;
		line-height: 30px;
	}
	#header .social-links{
		margin-top: 15px;
	}
	#header .container {
		display: flex;
		flex-direction: column;
		align-items: center;
	}
}

/*=== Navigation Menu ===*/
.nav-menu {
	position: fixed;
	top: 27px;
	right: 120px;
}
.nav-menu ul {
	display: flex;
	justify-content: flex-end;
	margin: 0;
	padding: 0;
	list-style: none;
}
.nav-menu li + li {
	margin-left: 30px;
}
.nav-menu a {
	display: block;
	position: relative;
	color: rgba(255, 255, 255, 0.7);
	font-size: 16px;
	font-family: "Poppins", sans-serif;
	font-weight: 700;
}
.nav-menu a::before {
	content: "";
	position: absolute;
	width: 0;
	height: 2px;
	bottom: -4px;
	left: 0;
	background-color: #18d26e;
	visibility: hidden;
	width: 0px;
	transition: all 0.3s ease-in-out 0s;
}
.nav-menu a:hover::before,
.nav-menu li:hover > a::before,
.nav-menu .active > a::before {
	visibility: visible;
	width: 100%;
}
.nav-menu a:hover,
.nav-menu .active > a,
.nav-menu li:hover > a {
	color: #fff;
	text-decoration: none;
}

/* Mobile */
.mobile-nav-toggle {
  position: fixed;
  right: 15px;
  top: 15px;
  z-index: 9998;
  border: 0;
  background: none;
  font-size: 24px;
  transition: all 0.4s;
  outline: none !important;
  line-height: 1;
  cursor: pointer;
  text-align: right;
}
.mobile-nav-toggle i {
	color: #fff;
}
.mobile-nav {
	position: fixed;
	top: 55px;
	right: 15px;
	bottom: 15px;
	left: 15px;
	z-index: 9999;
	overflow-y: auto;
	background: rgba(0, 0, 0, 0.7);
	transition: ease-in-out 0.2s;
	opacity: 0;
	visibility: hidden;
	border-radius: 10px;
	padding-top: 10px 0;
	border: 2px solid rgba(255, 255, 255, 0.12); 
}
.mobile-nav * {
	margin: 0;
	padding: 0;
	list-style: none;
}
.mobile-nav-active {
	overflow: hidden;
}
.mobile-nav-active .mobile-nav {
	opacity: 1;
	visibility: visible;
}
.mobile-nav a {
	display: block;
	position: relative;
	color: #fff;
	padding: 10px 20px;
	font-weight: 500;
	outline: none;
}
.mobile-nav a:hover,
.mobile-nav .active > a,
.mobile-nav li:hover > a {
	color: #18d26e;
	text-decoration: none;
}

/*== Header Top ==*/
#header.header-top {
  height: 80px;
  position: fixed;
  left: 0;
  top: 0;
  right: 0;
  background: rgba(0, 0, 0, 0.9);
}

#header.header-top .social-links, #header.header-top h2 {
  display: none;
}

#header.header-top h1 {
  margin-right: auto;
  font-size: 36px;
}

#header.header-top .container {
  display: flex;
  align-items: center;
}

#header.header-top .nav-menu {
  margin: 0;
}

@media (max-width: 768px) {
  #header.header-top {
    height: 60px;
  }
  #header.header-top h1 {
    font-size: 26px;
  }
}

/*== Section General ==*/
section {
  overflow: hidden;
  position: absolute;
  width: 100%;
  top: 140px;
  bottom: 100%;
  opacity: 0;
  transition: ease-in-out 0.4s;
  z-index: 2;
}

section.section-show {
  top: 100px;
  bottom: auto;
  opacity: 1;
  padding-bottom: 55px;
}

section .container {
  background: rgba(0, 0, 0, 0.9);
  padding: 30px;
}

@media (max-width: 768px) {
  section {
    top: 120px;
  }
  section.section-show {
    top: 80px;
    padding-bottom: 4em;
  }
}

.section-title h2 {
  font-size: 14px;
  font-weight: 500;
  padding: 0;
  line-height: 1px;
  margin: 0 0 20px 0;
  letter-spacing: 2px;
  text-transform: uppercase;
  color: #aaaaaa;
  font-family: "Poppins", sans-serif;
}

.section-title h2::after {
  content: "";
  width: 120px;
  height: 1px;
  display: inline-block;
  background: #4ceb95;
  margin: 4px 10px;
}

.section-title p {
  margin: 0;
  margin: -15px 0 15px 0;
  font-size: 36px;
  font-weight: 700;
  text-transform: uppercase;
  font-family: "Poppins", sans-serif;
  color: #fff;
}

/*=== About ===*/
.about-me .content h3 {
	font-weight: 700;
	font-size: 26px;
	color: #18d26e;
}
.about-me .content ul {
	list-style: none;
	padding: 0;
}
.about-me .content ul li {
	padding-bottom: 10px;
}
.about-me .content ul i {
	font-size: 20px;
	padding-right: 2px;
	color: #18d36e;
}
.about-me .content p:last-child {
  margin-bottom: 0;
}
.about-me .image {
	background-color: #18d36e;
	padding: 3px;
	/*border-radius: 50%;*/
	object-fit: cover;
	clip-path: polygon(50% 0%, 83% 12%, 100% 43%, 94% 78%, 68% 100%, 32% 100%, 6% 78%, 0% 43%, 17% 12%);
}
.about-me img {
	/*border: 5px solid #18d36e;*/
	/*border-radius: 31% 69% 16% 84% / 73% 37% 63% 27%; */
	clip-path: polygon(50% 0%, 83% 12%, 100% 43%, 94% 78%, 68% 100%, 32% 100%, 6% 78%, 0% 43%, 17% 12%);
	/*border-radius: 50%;*/
}

/*=== Skills ===*/
.my-skills .progress{
	height: 50px;
	display: block;
	background: none;
}
.my-skills .progress .skill{
	padding: 10px 0;
	margin: 0 0 6px 0;
	text-transform: uppercase;
	display: block;
	font-weight: 600;
	font-family: "Poppins", sans-serif;
	color: #fff;
}
.my-skills .progress .skill .val {
	float: right;
	font-style: normal;
}
.my-skills .progress-bar-warp {
	background: rgba(255, 255, 255, 0.15);
}
.my-skills .progress-bar {
	width: 1px;
	height: 10px;
	transition: 2s;
	background-color: #18d26e;
}

/*=== Credits ===*/
.credits{
	position: fixed;
	right: 0;
	left: 0;
	bottom: 0;
	padding: 15px;
	text-align: right;
	font-size: 13px;
	color: #fff;
	z-index: 999999;
}
@media (max-width: 992px) {
	.credits{
		text-align: center;
		padding: 10px;
		background: rgba(0, 0, 0, 0.8);
	}
}
.credits a {
	color: #18d26e;
	transition: 0.3s;
}
.credits a:hover {
	color: #fff;
}

/*=== Timeline ===*/
.timeline {
	/*border: 1px solid white;*/
	font-family: "Popins", sans-serif;
	width: 90%;
	display: flex;
	align-items: center;
	justify-content: center;
	margin: 0px auto;
	position: relative;
}
.timeline ul {
	padding: 0;
	margin: 0;
	list-style: none;
	width: 90%;
}
.timeline ul li {
	padding: 10px;
	background-color: rgba(204, 204, 204, 0.1);
	color: #fff;
	border-radius: 10px;
	margin-bottom: 20px;
}
.timeline ul li:hover {
	box-shadow: 0 5px 10px 0 rgba(24, 210, 110, 0.5);
}
.timeline ul li:last-child {
	margin-bottom: 0;
}
.timeline-content h1 {
	font-size: 25px;
	font-weight: 500
	line-height: 30px;
	margin-bottom: 10px;
	color: #18d26e
}
.timeline-content p {
	font-size: 16px;
	line-height: 30px;
	font-weight: 300;
	margin: 0;
}
.timeline-content .date {
	font-size: 13px;
	font-weight: 300;
	margin-bottom: 10px;
	letter-spacing: 2px;
}
.timeline-content .icon-box {
	display: flex;
  	align-items: center;
}
.timeline-content .icon-box .icon {
	color: #18d26e;
	font-size: 30px;
	margin-right: 5px;
	margin-bottom: 5px;
}
@media only screen and (min-width: 768px) {
	.timeline::before {
		content: "";
		position: absolute;
		height: 100%;
		width: 2px;
		left: 50%;
		transform: translateX(-50%);
		background-color: gray;
	}
	.timeline {
		margin: 40px auto;
	}
	.timeline ul li {
		width: 50%;
		margin-bottom: 50px;
		position: relative;
	}
	.timeline ul li:nth-child(odd) {
		float: left;
		clear: right;
		transform: translateX(-30px);
		border-radius: 20px 0px 20px 20px;
	}
	.timeline ul li:nth-child(even) {
		float: right;
		clear: left;
		transform: translateX(30px);
		border-radius: 0px 20px 20px 20px;
	}
	.timeline ul li::after {
		content: "";
		position: absolute;
		height: 20px;
		width: 20px;
		background-color: grey;
		border-radius: 50%;
		top: 0;
	}
	.timeline ul li:nth-child(odd)::after {
		transform: translate(50%, -50%);
		right: -30px;
	}
	.timeline ul li:nth-child(even)::after {
		transform: translate(-50%, -50%);
		left: -30px;
	}
	.timeline ul li:hover:after {
		background-color: #18d26e;
	}
	.timeline-content .date {
		position: absolute;
		top: -30px;
	}
}

/*=== Certificate ===*/
.section-body h2 {
	font-size: 26px;
	font-weight: 700;
	color: #18d26e;
}
.certificate ul li {
	list-style: none;
	font-size: 15px;
	font-weight: 500;
}
.certificate .icofont-rounded-right {
	color: #18d36e;
	margin-right: 5px;
}

/*=== Project ===*/
.project {
	margin: 0;
	padding: 0;
}
.project .card {
	background-color: rgb(244, 244, 244, 0.1);
}
.card img {
	width: 100%;
	height: 200px;
	transition: 0.4s ease-in-out;
}
.card img:hover {
	transform: scale(1.1);
	z-index: 1;
}
.card-body {
	width: 100%;
	height: 200px;
}
.card-body .card-title {
	font-size: 22px;
	color: #18d26e;
}
.card-body .card-text {
	font-size: 15px;
	font-style: italic;
}

